<resources>
    <string name="app_name">HoloYugioh</string>
    <string name="action_settings">Settings</string>

    <!-- SIGN IN STRINGS-->
    <string name="signed_in_fmt">Signed in as: %s</string>
    <string name="signed_in">Signed in</string>
    <string name="signing_in">Signing in…</string>
    <string name="signed_out">Signed out</string>
    <string name="loading">Loading…</string>
    <string name="sign_out">Sign Out</string>
    <string name="disconnect">Disconnect</string>

    <string name="title_activity_splash">SplashActivity</string>
    <string name="start_p1">Duel as Player 1</string>
    <string name="start_p2">Duel as Player 2</string>

    <!-- PLAYER OPTION STRINGS -->
    <string name="menu">Menu</string>
    <string name="oppLP">Opponent LP</string>
    <string name="yourLP">Your LP</string>
    <string name="opp_field">View Opponent Field</string>
    <string name="your_field">View Your Field</string>
    <string name="title_activity_menu">Menu</string>


    <!-- BACK BUTTON -->
    <string name="back">Back</string>
    <string name="end_turn">End Turn</string>

    <!-- CARD PLACEMENT -->
    <string name="face_up">Face Up</string>
    <string name="face_down">Face Down</string>

    <!-- NFC -->
    <string name="nfc">Tap card to back of phone!</string>

    <!-- CARD DETAILS -->
    <string name="atk">ATK</string>
    <string name="def">DEF</string>
    <string name="card_type">CARD TYPE</string>
    <string name="type">TYPE</string>
    <string name="attribute">ATTRIBUTE</string>
    <string name="effect">EFFECT</string>

    <!-- CARD OPTIONS -->
    <string name="destroy">Destroy</string>
    <string name="face_up_ATK">Face-Up ATK</string>
    <string name="face_up_DEF">Face-Up DEF</string>
    <string name="set">Set</string>
    <string name="remove_play">Remove from Play</string>
    <string name="view_details">View Details</string>

    <!-- FIELD STRINGS -->
    <string name="pendulum_left">Left</string>
    <string name="pendulum_right">Right</string>
    <string name="field_spell">Fieldy</string>
    <string name="graveyard">Grave</string>

    <!-- LIFE POINT STRINGS -->
    <string name="plus">Plus</string>
    <string name="minus">Minus</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value" />

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>

    <string name="app_id">844665268262</string>

</resources>
