<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="horizontal" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:weightSum="1">

    <Button
        android:layout_width="wrap_content"
        android:layout_height="@dimen/header_height"
        android:text="@string/back"
        android:id="@+id/back"/>

    <TextView
        android:layout_width="0dp"
        android:layout_height="@dimen/header_height"
        android:text="@string/app_name"
        android:layout_weight="1"
        style="@style/header_text"
        android:id="@+id/card_name" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="@dimen/header_height"
        android:text="@string/menu"
        android:id="@+id/menu"/>

</LinearLayout>